# afmdocs

./: .gitignore  LICENSE  README.md  afmdocs.toml  error_test_cases.md  pyproject.toml  requirements.txt
docs/: homepage.md
src/: config.py  markdown_parser.py  site_builder.py  template_engine.py
tests/: test_config.py
themes/default/: base.html  main.html
