[project]
name = "afmdocs"
description = "mkdocs clone for my documentation needs"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{name = "Ayoob", email = "ayoob.florival@gmail.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
version = "0.1.0"

[project.urls]
Homepage = "https://github.com/ayoobflorival/afmdocs"
"Bug Tracker" = "https://github.com/ayoobflorival/afmdocs/issues"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''